chore: add email to composer author

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "authors": [
     {
-      "name": "Premier MCPE"
+      "name": "Premier MCPE",
+      "email": "premiermcpe@gmail.com"
     }
   ]
 }
