--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,14 @@
   "type": "library",
   "version": "v1.0.0",
   "require": {
+    "pocketmine/pocketmine-mp": "^5.0.0",
     "muqsit/invmenu": "^4.6.5",
     "dktapps/pmforms": "^2.1.0"
   },
   "require-dev": {
-    "pocketmine/pocketmine-mp": "^5.0.0",
-    "php": "^8.2"
+    "phpstan/phpstan": "^1.2.0",
+    "phpstan/phpstan-strict-rules": "^1.0",
+    "phpstan/extension-installer": "^1.0"
   },
   "autoload": {
     "classmap": [
@@ -21,5 +23,10 @@
       "name": "Premier MCPE",
       "email": "premiermcpe@gmail.com"
     }
-  ]
+  ],
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    }
+  }
 }
