--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
     "allow-plugins": {
       "phpstan/extension-installer": true
     }
+  },
+  "scripts": {
+    "analyse": "vendor/bin/phpstan analyse -c phpstan.neon.dist"
   }
 }
